--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
   mysql:
     image: mysql
     environment:
-      - MYSQL_ROOT_PASSWORD=lol123
+      - MYSQL_ROOT_PASSWORD=amnesia
     restart: always
     volumes:
       - ./mysql:/var/lib/mysql
@@ -24,6 +24,7 @@ services:
 
   amnesia:
     build: .
+    restart: always
     ports:
       - 3000:80
     volumes:
