--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,8 +23,7 @@ services:
       - 2000:6379
 
   amnesia:
-    build: .
-    restart: always
+    image: amnesia:latest
     ports:
       - 3000:80
     volumes:
