--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,25 @@
+aiomysql==0.1.1
+aioredis==2.0.1
 anyio==3.6.1
+async-timeout==4.0.2
 black==22.6.0
+certifi==2022.6.15
 click==8.1.3
+databases==0.6.1
 fastapi==0.79.0
-h11==0.13.0
+greenlet==1.1.2
+h11==0.12.0
+httpcore==0.15.0
+httpx==0.23.0
 idna==3.3
 mypy-extensions==0.4.3
 pathspec==0.9.0
 platformdirs==2.5.2
 pydantic==1.9.1
+PyMySQL==1.0.2
+rfc3986==1.5.0
 sniffio==1.2.0
+SQLAlchemy==1.4.40
 starlette==0.19.1
 tomli==2.0.1
 typing_extensions==4.3.0
