--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,9 @@ anyio==3.6.1
 async-timeout==4.0.2
 black==22.6.0
 certifi==2022.6.15
+cffi==1.15.1
 click==8.1.3
+cryptography==37.0.4
 databases==0.6.1
 fastapi==0.79.0
 greenlet==1.1.2
@@ -13,8 +15,10 @@ httpcore==0.15.0
 httpx==0.23.0
 idna==3.3
 mypy-extensions==0.4.3
+orjson==3.7.11
 pathspec==0.9.0
 platformdirs==2.5.2
+pycparser==2.21
 pydantic==1.9.1
 PyMySQL==1.0.2
 rfc3986==1.5.0
