--- a/requirements.txt
+++ b/requirements.txt
@@ -2,30 +2,40 @@ aiomysql==0.1.1
 aioredis==2.0.1
 anyio==3.6.1
 async-timeout==4.0.2
+bcrypt==3.2.2
 black==22.6.0
 certifi==2022.6.15
 cffi==1.15.1
+cfgv==3.3.1
 click==8.1.3
 cryptography==37.0.4
 databases==0.6.1
+distlib==0.3.5
 fastapi==0.79.0
+filelock==3.8.0
 greenlet==1.1.2
 h11==0.12.0
 httpcore==0.15.0
 httpx==0.23.0
+identify==2.5.3
 idna==3.3
 mypy-extensions==0.4.3
+nodeenv==1.7.0
 orjson==3.7.11
 pathspec==0.9.0
 platformdirs==2.5.2
+pre-commit==2.20.0
 pycparser==2.21
 pydantic==1.9.1
 PyMySQL==1.0.2
+PyYAML==6.0
 rfc3986==1.5.0
 sniffio==1.2.0
 SQLAlchemy==1.4.40
 starlette==0.19.1
+toml==0.10.2
 tomli==2.0.1
 typing_extensions==4.3.0
 uvicorn==0.18.2
 uvloop==0.16.0
+virtualenv==20.16.3
