--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,32 @@
+aiohttp==3.8.1
 aioredis==2.0.1
+aiosignal==1.2.0
 anyio==3.6.1
 async-timeout==4.0.2
 asyncpg==0.26.0
+attrs==22.1.0
 bcrypt==3.2.2
 black==22.6.0
 certifi==2022.6.15
 cffi==1.15.1
 cfgv==3.3.1
+charset-normalizer==2.1.0
 click==8.1.3
 cryptography==37.0.4
 databases==0.6.1
 distlib==0.3.5
 fastapi==0.79.0
 filelock==3.8.0
+frozenlist==1.3.1
+geoip2==4.6.0
 greenlet==1.1.2
 h11==0.12.0
 httpcore==0.15.0
 httpx==0.23.0
 identify==2.5.3
 idna==3.3
+maxminddb==2.2.0
+multidict==6.0.2
 mypy-extensions==0.4.3
 nodeenv==1.7.0
 orjson==3.7.11
@@ -28,6 +36,7 @@ pre-commit==2.20.0
 pycparser==2.21
 pydantic==1.9.1
 PyYAML==6.0
+requests==2.28.1
 rfc3986==1.5.0
 sniffio==1.2.0
 SQLAlchemy==1.4.40
@@ -35,6 +44,8 @@ starlette==0.19.1
 toml==0.10.2
 tomli==2.0.1
 typing_extensions==4.3.0
+urllib3==1.26.11
 uvicorn==0.18.2
 uvloop==0.16.0
 virtualenv==20.16.3
+yarl==1.8.1
