--- a/requirements.txt
+++ b/requirements.txt
@@ -35,9 +35,11 @@ platformdirs==2.5.2
 pre-commit==2.20.0
 pycparser==2.21
 pydantic==1.9.1
+python-multipart==0.0.5
 PyYAML==6.0
 requests==2.28.1
 rfc3986==1.5.0
+six==1.16.0
 sniffio==1.2.0
 SQLAlchemy==1.4.40
 starlette==0.19.1
